--- a/template/src/app.wxss
+++ b/template/src/app.wxss
@@ -4,10 +4,9 @@
 /* global style */
 page {
   background-color: #f7f7f7;
-  font-size: 24rpx;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica,
-    Segoe UI, Arial, Roboto, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft Yahei", sans-serif;
+	font-size: 24rpx;
+	color: var(--black);
+	font-family: 'JDZhengHei-01-Regular', Helvetica Neue, Helvetica, sans-serif;
 }
 
 /* iPhoneX适配 */
