--- a/template/src/pages/personal/personal.wxss
+++ b/template/src/pages/personal/personal.wxss
@@ -1,1 +1,6 @@
-/* pages/personal/personal.wxss */
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
